fix wrapping text on menu items

--- a/css/app.css
+++ b/css/app.css
@@ -45,7 +45,7 @@ body {
     display: flex;
     justify-content: flex-end;
     display: flex;
-    gap: 15px;
+    gap: 5px;
     font-size: 1rem;
 }
 
@@ -54,6 +54,7 @@ body {
     text-decoration: none;
     padding: 5px 10px;
     transition: background 0.3s ease;
+    flex-shrink: 0;
 }
 
 .navbar-nav a:hover {
